--- a/src/styles.scss
+++ b/src/styles.scss
@@ -147,3 +147,13 @@
         }
     }
 }
+
+.red-snackbar {
+    background: #F44336 !important;
+    color: white !important;
+}
+
+.green-snackbar {
+    background: #0bff0b !important;
+    color: black !important;
+}
