--- a/src/app/main/apps/login/login.component.html
+++ b/src/app/main/apps/login/login.component.html
@@ -41,7 +41,7 @@
                     </a>
                 </div>
                 <button type="submit" mat-raised-button color="accent" class="submit-button" aria-label="LOG IN"
-                    [disabled]="loginForm.invalid">
+                    [disabled]="loginForm.invalid || loginForm.disabled">
                     LOGIN
                 </button>
             </form>
