--- a/src/app/main/apps/customer/list-customer/list-customer.component.html
+++ b/src/app/main/apps/customer/list-customer/list-customer.component.html
@@ -23,7 +23,7 @@
             <!-- / APP TITLE -->
 
             <!-- ADD BUTTON -->
-            <button mat-raised-button [routerLink]="'/apps/customer/add'"
+            <button mat-raised-button [routerLink]="'/customer/add'"
                 class="add-product-button fuse-white mt-24 mt-md-0">
                 <span>ADD NEW CUSTOMER</span>
             </button>
