--- a/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
+++ b/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
@@ -23,7 +23,7 @@
             <!-- / APP TITLE -->
 
             <!-- ADD BUTTON -->
-            <button mat-raised-button [routerLink]="'/apps/photographer/add'"
+            <button mat-raised-button [routerLink]="'/photographer/add'"
                 class="add-product-button fuse-white mt-24 mt-md-0">
                 <span>ADD NEW PHOTOGRAPHER</span>
             </button>
