--- a/src/app/main/apps/admin/list-admin/list-admin.component.html
+++ b/src/app/main/apps/admin/list-admin/list-admin.component.html
@@ -23,7 +23,7 @@
             <!-- / APP TITLE -->
 
             <!-- ADD BUTTON -->
-            <button mat-raised-button [routerLink]="'/apps/admin/add'"
+            <button mat-raised-button [routerLink]="'/admin/add'"
                 class="add-product-button fuse-white mt-24 mt-md-0">
                 <span>ADD NEW ADMIN</span>
             </button>
