--- a/src/app/main/apps/e-commerce/products/products.theme.scss
+++ b/src/app/main/apps/e-commerce/products/products.theme.scss
@@ -24,4 +24,26 @@
             }
         }
     }
+
+    app-user {
+
+        .header {
+
+            .search-wrapper {
+                background: map-get($background, card);
+
+                .search {
+
+                    .mat-icon {
+                        color: map-get($foreground, icon);
+                    }
+
+                    input {
+                        background: map-get($background, card);
+                        color: map-get($foreground, text);
+                    }
+                }
+            }
+        }
+    }
 }
