--- a/src/app/main/apps/customer/add-edit-customer/add-edit-customer.component.html
+++ b/src/app/main/apps/customer/add-edit-customer/add-edit-customer.component.html
@@ -1,7 +1,8 @@
 <div id="forms" class="page-layout simple fullwidth" fxLayout="column">
 
     <!-- HEADER -->
-    <div class="header accent p-24 h-160" fxLayout="row" fxLayoutAlign="space-between center">
+    <div class="header accent p-24 h-160 style-all-listing-and-add-form-header" fxLayout="row"
+        fxLayoutAlign="space-between center">
         <div fxLayout="column" fxLayoutAlign="center start">
             <div fxLayout="row" fxLayoutAlign="start center">
                 <mat-icon class="secondary-text s-18">home</mat-icon>
@@ -27,16 +28,16 @@
             <form class="mat-card mat-elevation-z4 p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
                 name="userForm" [formGroup]="userForm">
 
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                <div class="display-form-in-all" fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
+                    <mat-form-field appearance="outline" fxFlex="50" class="width-100 pr-4">
                         <mat-label>First name</mat-label>
                         <input matInput formControlName="firstName" required>
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                         <mat-error>First Name is required!</mat-error>
                     </mat-form-field>
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
+                    <mat-form-field appearance="outline" fxFlex="50" class="width-100 pl-4">
                         <mat-label>Last name</mat-label>
                         <input matInput formControlName="lastName" required>
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
@@ -45,7 +46,7 @@
 
                 </div>
 
-                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                <div class="display-form-in-all" fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Email</mat-label>
