--- a/src/app/main/apps/e-commerce/products/products.component.scss
+++ b/src/app/main/apps/e-commerce/products/products.component.scss
@@ -1,6 +1,6 @@
 @import "src/@fuse/scss/fuse";
 
-e-commerce-products {
+// e-commerce-products {
 
     #products {
 
@@ -124,4 +124,4 @@ e-commerce-products {
             border-radius: 50%;
         }
     }
-}
+// }
