add css to code

--- a/src/app/main/apps/admin/list-admin/list-admin.component.html
+++ b/src/app/main/apps/admin/list-admin/list-admin.component.html
@@ -1,4 +1,4 @@
-<div id="list-page" class="page-layout carded fullwidth inner-scroll">
+<div id="list-customet" class="page-layout carded fullwidth inner-scroll">
 
     <!-- TOP BACKGROUND -->
     <div class="top-bg accent"></div>
@@ -23,10 +23,10 @@
             <!-- / APP TITLE -->
 
             <!-- ADD BUTTON -->
-            <button mat-raised-button [routerLink]="'/admin/add'"
+            <!-- <button mat-raised-button [routerLink]="'/admin/add'"
                 class="add-product-button fuse-white mt-24 mt-md-0">
                 <span>ADD NEW ADMIN</span>
-            </button>
+            </button> -->
             <!-- / ADD BUTTON -->
 
         </div>
