--- a/src/app/main/apps/admin/add-edit-admin/add-edit-admin.component.html
+++ b/src/app/main/apps/admin/add-edit-admin/add-edit-admin.component.html
@@ -11,10 +11,10 @@
             </div>
             <div class="h1 mt-16">Add new admin</div>
         </div>
-        <button mat-raised-button class="save-product-button" [disabled]="userForm.invalid || form.pristine"
-            *ngIf="pageType ==='add'">
+        <!-- <button mat-raised-button class="save-product-button" [disabled]="adminForm.invalid || adminForm.pristine ||
+            adminForm.disabled" *ngIf="pageType ==='add'" (click)="formSubmit()">
             <span>ADD</span>
-        </button>
+        </button> -->
     </div>
     <!-- / HEADER -->
 
@@ -22,11 +22,8 @@
     <div class="content p-24">
 
         <div class="mb-24" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
-
-            <!-- REACTIVE FORM EXAMPLE -->
-
             <form class="mat-card mat-elevation-z4 p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
-                name="userForm" [formGroup]="userForm">
+                name="adminForm" [formGroup]="adminForm">
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
@@ -39,7 +36,7 @@
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
                         <mat-label>Last name</mat-label>
-                        <input matInput formControlName="lastName" required>
+                        <input matInput formControlName="lastName">
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                         <mat-error>Last Name is required!</mat-error>
                     </mat-form-field>
@@ -47,8 +44,6 @@
                 </div>
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-
-
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Username</mat-label>
                         <input matInput formControlName="username" required>
@@ -58,42 +53,50 @@
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Email</mat-label>
                         <input matInput formControlName="email" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Email is required!</mat-error>
+                        <mat-icon matSuffix class="secondary-text">email</mat-icon>
+                        <mat-error *ngIf="adminForm.get('email').hasError('required')">
+                            Email is required
+                        </mat-error>
+                        <mat-error *ngIf="!adminForm.get('email').hasError('required') &&
+                                    adminForm.get('email').hasError('email')">
+                            Please enter a valid email address
+                        </mat-error>
                     </mat-form-field>
                 </div>
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
-
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Phone</mat-label>
-                        <input matInput formControlName="phone" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Phone is required!</mat-error>
+                        <input matInput formControlName="mobile_number" required>
+                        <mat-icon matSuffix class="secondary-text">local_phone</mat-icon>
+                        <mat-error>Phone number must be between 7 to 15 digits</mat-error>
                     </mat-form-field>
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
+                    <div class="pl-4">
                         <mat-label>Profile Photo</mat-label>
-                        <input matInput formControlName="profilePhoto" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Profile Photo is required!</mat-error>
-                    </mat-form-field>
-
+                        <button type="button" (click)="uploadProfilePicture.click()" mat-raised-button type="button"
+                            color="accent" status="success">
+                            <span>Upload</span>
+                            <input #uploadProfilePicture type="file" (change)="onFileChange($event)"
+                                style="display:none;" accept="image/*" />
+                        </button>
+                    </div>
                 </div>
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Profit Share Percentage</mat-label>
-                        <input matInput formControlName="profitSharePercentage" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+                        <input matInput formControlName="profitSharePercentage" type="number">
                         <mat-error>Profit Share Percentage is required!</mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
                         <mat-label>Illinois Email </mat-label>
-                        <input matInput formControlName="illinoisEmail" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Illinois Email is required!</mat-error>
+                        <input matInput formControlName="illinoisEmail">
+                        <mat-icon matSuffix class="secondary-text">email</mat-icon>
+                        <mat-error *ngIf="adminForm.get('email').hasError('email')">
+                            Please enter a valid email address
+                        </mat-error>
                     </mat-form-field>
 
                 </div>
@@ -102,16 +105,10 @@
 
                     <mat-form-field appearance="outline" fxFlex="100">
                         <mat-label>Status</mat-label>
-                        <mat-select formControlName="status" required>
-                            <mat-option [value]="'Active'">
-                                Active
-                            </mat-option>
-                            <mat-option [value]="'Inactive'">
-                                Inactive
-                            </mat-option>
+                        <mat-select formControlName="status">
+                            <mat-option *ngFor="let statusItem of statusList" [value]="statusItem.id">
+                                {{statusItem.name}}</mat-option>
                         </mat-select>
-                        <mat-icon matSuffix class="secondary-text">outlined_flag</mat-icon>
-                        <mat-error>status is required!</mat-error>
                     </mat-form-field>
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Unique URL</mat-label>
@@ -119,6 +116,16 @@
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
                         <mat-error>Unique URL is required!</mat-error>
                     </mat-form-field>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="center center">
+                    <button mat-raised-button type="button" color="accent" [disabled]="adminForm.invalid || adminForm.pristine ||
+                    adminForm.disabled" *ngIf="pageType ==='add'" (click)="formSubmit()">
+                        Add
+                    </button>
+                    &nbsp;&nbsp;
+                    <button mat-raised-button type="button" color="warn">
+                        Cancel
+                    </button>
                 </div>
             </form>
         </div>
