--- a/src/app/main/apps/admin/list-admin/list-admin.component.html
+++ b/src/app/main/apps/admin/list-admin/list-admin.component.html
@@ -34,9 +34,8 @@
 
         <!-- CONTENT CARD -->
         <div class="content-card">
-
-            <mat-table class="products-table" #table [dataSource]="dataSource" matSort [@animateStagger]="{value:'50'}"
-                fusePerfectScrollbar>
+            <mat-table id="matTable" class="products-table" #table [dataSource]="dataSource" matSort
+                [@animateStagger]="{value:'50'}" fusePerfectScrollbar>
 
                 <!-- ID Column -->
                 <ng-container matColumnDef="id">
@@ -47,10 +46,10 @@
                 </ng-container>
 
                 <!-- Image Column -->
-                <ng-container matColumnDef="fullName">
+                <ng-container matColumnDef="full_name">
                     <mat-header-cell *matHeaderCellDef mat-sort-header>Full name</mat-header-cell>
                     <mat-cell *matCellDef="let admin">
-                        <p class="text-truncate">{{admin.fullName}}</p>
+                        <p class="text-truncate">{{admin.full_name}}</p>
                     </mat-cell>
                 </ng-container>
 
@@ -97,14 +96,15 @@
 
                 <mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></mat-header-row>
 
-                <mat-row *matRowDef="let admin; columns: displayedColumns;" class="admin" matRipple
-                    [routerLink]="'/apps/customer/edit/'+admin.id+'/'+admin.handle">
+                <mat-row *matRowDef="let admin; columns: displayedColumns;" class="admin" matRipple>
                 </mat-row>
 
             </mat-table>
 
-            <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0" [pageSize]="10"
+            <!-- <mat-paginator #paginator [length]="dataSource.filteredData.length" [pageIndex]="0" [pageSize]="10"
                 [pageSizeOptions]="[5, 10, 25, 100]">
+            </mat-paginator> -->
+            <mat-paginator #paginator [length]="_adminService.total" [pageIndex]="pageIndex" [pageSize]="pageSize">
             </mat-paginator>
 
         </div>
