--- a/src/app/main/apps/customer/add-edit-customer/add-edit-customer.component.html
+++ b/src/app/main/apps/customer/add-edit-customer/add-edit-customer.component.html
@@ -11,10 +11,6 @@
             </div>
             <div class="h1 mt-16">Add new customer</div>
         </div>
-        <button mat-raised-button class="save-product-button" [disabled]="userForm.invalid || form.pristine"
-            *ngIf="pageType ==='add'">
-            <span>ADD</span>
-        </button>
     </div>
     <!-- / HEADER -->
 
@@ -26,7 +22,7 @@
             <!-- REACTIVE FORM EXAMPLE -->
 
             <form class="mat-card mat-elevation-z4 p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
-                name="userForm" [formGroup]="userForm">
+                name="editForm" [formGroup]="editForm">
 
                 <div class="display-form-in-all" fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
@@ -39,9 +35,8 @@
 
                     <mat-form-field appearance="outline" fxFlex="50" class="width-100 pl-4">
                         <mat-label>Last name</mat-label>
-                        <input matInput formControlName="lastName" required>
+                        <input matInput formControlName="lastName">
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Last Name is required!</mat-error>
                     </mat-form-field>
 
                 </div>
@@ -51,13 +46,19 @@
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Email</mat-label>
                         <input matInput formControlName="email" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Email is required!</mat-error>
+                        <mat-icon matSuffix class="secondary-text">email</mat-icon>
+                        <mat-error *ngIf="editForm.get('email').hasError('required')">
+                            Email is required
+                        </mat-error>
+                        <mat-error *ngIf="!editForm.get('email').hasError('required') &&
+                                    editForm.get('email').hasError('email')">
+                            Please enter a valid email address
+                        </mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" fxFlex="100">
                         <mat-label>Reference</mat-label>
-                        <mat-select formControlName="reference" required>
+                        <mat-select formControlName="reference">
                             <mat-option [value]="'United States of America'">
                                 United States of America
                             </mat-option>
@@ -77,8 +78,6 @@
                                 Turkey
                             </mat-option>
                         </mat-select>
-                        <mat-icon matSuffix class="secondary-text">outlined_flag</mat-icon>
-                        <mat-error>Reference is required!</mat-error>
                     </mat-form-field>
 
                 </div>
@@ -87,16 +86,15 @@
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Phone</mat-label>
-                        <input matInput formControlName="phone" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Phone is required!</mat-error>
+                        <input matInput formControlName="mobile_number" required>
+                        <mat-icon matSuffix class="secondary-text">local_phone</mat-icon>
+                        <mat-error>Phone number must be between 7 to 15 digits</mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
                         <mat-label>Website</mat-label>
-                        <input matInput formControlName="website" required>
+                        <input matInput formControlName="website">
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Website is required!</mat-error>
                     </mat-form-field>
 
                 </div>
@@ -105,60 +103,61 @@
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Brokrage Name</mat-label>
-                        <input matInput formControlName="brokrage_name" required>
+                        <input matInput formControlName="brokrage_name">
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Brokrage Name is required!</mat-error>
                     </mat-form-field>
 
-                    <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
-                        <mat-label>Broker logo</mat-label>
-                        <input matInput formControlName="broker_logo" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Broker logo is required!</mat-error>
-                    </mat-form-field>
+                    <div class="pl-4">
+                        <mat-label>Broker logo</mat-label>&nbsp;&nbsp;
+                        <button type="button" (click)="uploadBrokerLogo.click()" mat-raised-button type="button"
+                            color="accent" status="success">
+                            <span>Upload</span>
+                            <input #uploadBrokerLogo type="file" (change)="onFileChange($event,'broker_logo')"
+                                style="display:none;" accept="image/*" />
+                        </button>
+                    </div>
 
                 </div>
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
-                        <mat-label>Group Name</mat-label>
-                        <input matInput formControlName="group_name" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Group Name is required!</mat-error>
+                        <mat-label>Group or Team Name</mat-label>
+                        <input matInput formControlName="group_name">
+                        <mat-icon matSuffix class="secondary-text">group</mat-icon>
                     </mat-form-field>
-
-                    <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
-                        <mat-label>Group logo</mat-label>
-                        <input matInput formControlName="group_logo" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Group logo is required!</mat-error>
-                    </mat-form-field>
+                    <div class="pl-4">
+                        <mat-label>Group logo</mat-label>&nbsp;&nbsp;
+                        <button type="button" (click)="uploadGroupLogo.click()" mat-raised-button type="button"
+                            color="accent" status="success">
+                            <span>Upload</span>
+                            <input #uploadGroupLogo type="file" (change)="onFileChange($event,'group_logo')"
+                                style="display:none;" accept="image/*" />
+                        </button>
+                    </div>
 
                 </div>
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
-                    <mat-form-field appearance="outline" fxFlex="100">
+                    <mat-form-field appearance="outline" fxFlex="50">
                         <mat-label>Status</mat-label>
                         <mat-select formControlName="status" required>
-                            <mat-option [value]="'Active'">
-                                Active
-                            </mat-option>
-                            <mat-option [value]="'Inactive'">
-                                Inactive
-                            </mat-option>
+                            <mat-option *ngFor="let statusItem of statusList" [value]="statusItem.id">
+                                {{statusItem.name}}</mat-option>
                         </mat-select>
                         <mat-icon matSuffix class="secondary-text">outlined_flag</mat-icon>
                         <mat-error>status is required!</mat-error>
                     </mat-form-field>
-
-                    <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
-                        <mat-label>Additional logo</mat-label>
-                        <input matInput formControlName="adtional_logo" required>
-                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Additional logo is required!</mat-error>
-                    </mat-form-field>
+                    <div class="pl-4">
+                        <mat-label>Additional logo</mat-label>&nbsp;&nbsp;
+                        <button type="button" (click)="uploadAdditionalLogo.click()" mat-raised-button type="button"
+                            color="accent" status="success">
+                            <span>Upload</span>
+                            <input #uploadAdditionalLogo type="file" (change)="onFileChange($event,'adtional_logo')"
+                                style="display:none;" accept="image/*" />
+                        </button>
+                    </div>
 
                 </div>
 
@@ -172,20 +171,19 @@
                     </mat-form-field>
 
                 </div>
+                <div fxLayout="row" fxLayoutAlign="center center">
+                    <button mat-raised-button type="button" color="accent" [disabled]="editForm.invalid || editForm.pristine ||
+                    editForm.disabled" *ngIf="pageType ==='add'" (click)="formSubmit()">
+                        Add
+                    </button>
+                    &nbsp;&nbsp;
+                    <button mat-raised-button type="button" color="warn">
+                        Cancel
+                    </button>
+                </div>
 
             </form>
-
-            <!-- / REACTIVE FORM EXAMPLE -->
-
-            <!-- <div class="mat-card form-errors-model p-24 mat-elevation-z4">
-                <div class="h2 mb-24">Reactive Form Model</div>
-                <pre><code>{{userForm.getRawValue() | json}}</code></pre>
-            </div> -->
-
         </div>
-
-
-
     </div>
     <!-- / CONTENT -->
 
