--- a/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
+++ b/src/app/main/apps/photographer/list-photographer/list-photographer.component.html
@@ -97,8 +97,7 @@
 
                 <mat-header-row *matHeaderRowDef="displayedColumns; sticky:true"></mat-header-row>
 
-                <mat-row *matRowDef="let product; columns: displayedColumns;" class="product" matRipple
-                    [routerLink]="'/apps/customer/edit/'+product.id+'/'+product.handle">
+                <mat-row *matRowDef="let product; columns: displayedColumns;" class="product" matRipple>
                 </mat-row>
 
             </mat-table>
