--- a/src/app/main/apps/sales-representative/add-edit-sales-representative/add-edit-sales-representative.component.html
+++ b/src/app/main/apps/sales-representative/add-edit-sales-representative/add-edit-sales-representative.component.html
@@ -1,1 +1,119 @@
-<p>add-edit-sales-representative works!</p>
+<div id="forms" class="page-layout simple fullwidth" fxLayout="column">
+
+    <!-- HEADER -->
+    <div class="header accent p-24 h-160 style-all-listing-and-add-form-header" fxLayout="row"
+        fxLayoutAlign="space-between center">
+        <div fxLayout="column" fxLayoutAlign="center start">
+            <div fxLayout="row" fxLayoutAlign="start center">
+                <mat-icon class="secondary-text s-18">home</mat-icon>
+                <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
+                <span class="secondary-text">Sales Representative</span>
+            </div>
+            <div class="h1 mt-16">Add New Sales Representative</div>
+        </div>
+    </div>
+    <!-- / HEADER -->
+
+    <!-- CONTENT -->
+    <div class="content p-24">
+
+        <div class="mb-24" fxLayout="column" fxLayoutAlign="start" fxLayout.gt-md="row">
+            <form class="mat-card mat-elevation-z4 p-24 mr-24" fxLayout="column" fxLayoutAlign="start" fxFlex="1 0 auto"
+                name="editForm" [formGroup]="editForm">
+
+                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+
+                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
+                        <mat-label>First name</mat-label>
+                        <input matInput formControlName="firstName" required>
+                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+                        <mat-error>First Name is required!</mat-error>
+                    </mat-form-field>
+
+                    <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
+                        <mat-label>Last name</mat-label>
+                        <input matInput formControlName="lastName">
+                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+                        <mat-error>Last Name is required!</mat-error>
+                    </mat-form-field>
+
+                </div>
+
+                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
+                        <mat-label>Username</mat-label>
+                        <input matInput formControlName="username" required>
+                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+                        <mat-error>Username is required!</mat-error>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
+                        <mat-label>Email</mat-label>
+                        <input matInput formControlName="email" required>
+                        <mat-icon matSuffix class="secondary-text">email</mat-icon>
+                        <mat-error *ngIf="editForm.get('email').hasError('required')">
+                            Email is required
+                        </mat-error>
+                        <mat-error *ngIf="!editForm.get('email').hasError('required') &&
+                                    editForm.get('email').hasError('email')">
+                            Please enter a valid email address
+                        </mat-error>
+                    </mat-form-field>
+                </div>
+
+                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
+                        <mat-label>Phone</mat-label>
+                        <input matInput formControlName="mobile_number" required>
+                        <mat-icon matSuffix class="secondary-text">local_phone</mat-icon>
+                        <mat-error>Phone number must be between 7 to 15 digits</mat-error>
+                    </mat-form-field>
+
+                    <div class="pl-4">
+                        <mat-label>Profile Photo</mat-label>
+                        <button type="button" (click)="uploadProfilePicture.click()" mat-raised-button type="button"
+                            color="accent" status="success">
+                            <span>Upload</span>
+                            <input #uploadProfilePicture type="file" (change)="onFileChange($event)"
+                                style="display:none;" accept="image/*" />
+                        </button>
+                    </div>
+                </div>
+                <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                    <mat-form-field appearance="outline" fxFlex="50">
+                        <mat-label>Status</mat-label>
+                        <mat-select formControlName="status">
+                            <mat-option *ngFor="let statusItem of statusList" [value]="statusItem.id">
+                                {{statusItem.name}}</mat-option>
+                        </mat-select>
+                    </mat-form-field>
+                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
+                        <mat-label>Unique URL</mat-label>
+                        <input matInput formControlName="unique_url" required>
+                        <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+                        <mat-error>Unique URL is required!</mat-error>
+                    </mat-form-field>
+                </div>
+                <!-- <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
+                    <mat-form-field appearance="outline" fxFlex="50">
+                        <mat-label>Status</mat-label>
+                        <mat-checkbox formControlName="assign_as_sales_manager">
+                            Assign as Sales Manager?
+                        </mat-checkbox>
+                    </mat-form-field>
+                </div> -->
+
+
+                <div fxLayout="row" fxLayoutAlign="center center">
+                    <button mat-raised-button type="button" color="accent" [disabled]="editForm.invalid || editForm.pristine ||
+                    editForm.disabled" *ngIf="pageType ==='add'" (click)="formSubmit()">
+                        Add
+                    </button>
+                    &nbsp;&nbsp;
+                    <button mat-raised-button type="button" color="warn">
+                        Cancel
+                    </button>
+                </div>
+            </form>
+        </div>
+    </div>
+</div>
