--- a/src/app/main/apps/admin/add-edit-admin/add-edit-admin.component.html
+++ b/src/app/main/apps/admin/add-edit-admin/add-edit-admin.component.html
@@ -9,12 +9,22 @@
                 <mat-icon class="secondary-text s-16">chevron_right</mat-icon>
                 <span class="secondary-text">Admin Interface</span>
             </div>
-            <div class="h1 mt-16">Add new admin</div>
+            <div class="h1 mt-16">Add New Admin</div>
         </div>
         <!-- <button mat-raised-button class="save-product-button" [disabled]="adminForm.invalid || adminForm.pristine ||
             adminForm.disabled" *ngIf="pageType ==='add'" (click)="formSubmit()">
             <span>ADD</span>
         </button> -->
+        <div fxLayout="row" fxLayoutAlign="center center">
+            <button mat-raised-button type="button" [disabled]="adminForm.invalid || adminForm.pristine ||
+                    adminForm.disabled" *ngIf="pageType ==='add'" (click)="formSubmit()">
+                Submit
+            </button>
+            &nbsp;&nbsp;
+            <button mat-raised-button type="button" color="warn">
+                Cancel
+            </button>
+        </div>
     </div>
     <!-- / HEADER -->
 
@@ -31,7 +41,9 @@
                         <mat-label>First name</mat-label>
                         <input matInput formControlName="firstName" required>
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>First Name is required!</mat-error>
+                        <mat-error *ngIf="adminForm.get('firstName').errors?.invalidValue">
+                            Please Enter Valid First Name
+                        </mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
@@ -48,9 +60,14 @@
                         <mat-label>Username</mat-label>
                         <input matInput formControlName="username" required>
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Username is required!</mat-error>
+                        <mat-error *ngIf="adminForm.get('username').errors?.invalidValue">
+                            Please Enter Valid Username
+                        </mat-error>
+                        <mat-error *ngIf="adminForm.get('username').errors?.serverError">
+                            {{ adminForm.get('username').errors?.serverError }}
+                        </mat-error>
                     </mat-form-field>
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
+                    <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
                         <mat-label>Email</mat-label>
                         <input matInput formControlName="email" required>
                         <mat-icon matSuffix class="secondary-text">email</mat-icon>
@@ -61,6 +78,9 @@
                                     adminForm.get('email').hasError('email')">
                             Please enter a valid email address
                         </mat-error>
+                        <mat-error *ngIf="adminForm.get('email').errors?.serverError">
+                            {{ adminForm.get('email').errors?.serverError }}
+                        </mat-error>
                     </mat-form-field>
                 </div>
 
@@ -69,17 +89,25 @@
                         <mat-label>Phone</mat-label>
                         <input matInput formControlName="mobile_number" required>
                         <mat-icon matSuffix class="secondary-text">local_phone</mat-icon>
-                        <mat-error>Phone number must be between 7 to 15 digits</mat-error>
+                        <mat-error *ngIf="!adminForm.get('mobile_number').errors?.serverError">
+                            Phone number must be between 7 to 15 digits
+                        </mat-error>
+                        <mat-error *ngIf="adminForm.get('mobile_number').errors?.serverError">
+                            {{ adminForm.get('mobile_number').errors?.serverError }}
+                        </mat-error>
                     </mat-form-field>
 
                     <div class="pl-4">
                         <button type="button" (click)="uploadProfilePicture.click()" mat-raised-button type="button"
                             color="accent" status="success">
-                            <span>Upload</span>
+                            <span>Upload Profile Photo</span>
                             <input #uploadProfilePicture type="file" (change)="onFileChange($event)"
                                 style="display:none;" accept="image/*" />
                         </button>
                         <mat-label>{{fileName}}</mat-label>
+                        <mat-error *ngIf="adminForm.get('photo').errors?.serverError">
+                            {{ adminForm.get('photo').errors?.serverError }}
+                        </mat-error>
                     </div>
                 </div>
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
@@ -87,15 +115,20 @@
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Profit Share Percentage</mat-label>
                         <input matInput formControlName="profitSharePercentage" type="number">
-                        <mat-error>Profit Share Percentage is required!</mat-error>
+                        <mat-error *ngIf="adminForm.get('profitSharePercentage').errors?.serverError">
+                            {{ adminForm.get('profitSharePercentage').errors?.serverError }}
+                        </mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
                         <mat-label>Illinois Email </mat-label>
                         <input matInput formControlName="illinoisEmail">
                         <mat-icon matSuffix class="secondary-text">email</mat-icon>
-                        <mat-error *ngIf="adminForm.get('email').hasError('email')">
+                        <mat-error *ngIf="adminForm.get('illinoisEmail').hasError('email')">
                             Please enter a valid email address
+                        </mat-error>
+                        <mat-error *ngIf="adminForm.get('illinoisEmail').errors?.serverError">
+                            {{ adminForm.get('illinoisEmail').errors?.serverError }}
                         </mat-error>
                     </mat-form-field>
 
@@ -103,29 +136,27 @@
 
                 <div fxLayout="row" fxLayoutAlign="start center" fxFlex="1 0 auto">
 
-                    <mat-form-field appearance="outline" fxFlex="100">
+                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Status</mat-label>
                         <mat-select formControlName="status">
                             <mat-option *ngFor="let statusItem of statusList" [value]="statusItem.id">
                                 {{statusItem.name}}</mat-option>
                         </mat-select>
+                        <mat-error *ngIf="adminForm.get('status').errors?.serverError">
+                            {{ adminForm.get('status').errors?.serverError }}
+                        </mat-error>
                     </mat-form-field>
-                    <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
+                    <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
                         <mat-label>Unique URL</mat-label>
                         <input matInput formControlName="unique_url" required>
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
-                        <mat-error>Unique URL is required!</mat-error>
+                        <mat-error *ngIf="adminForm.get('unique_url').errors?.invalidValue">
+                            Please Enter Valid Unique Url
+                        </mat-error>
+                        <mat-error *ngIf="adminForm.get('unique_url').errors?.serverError">
+                            {{ adminForm.get('unique_url').errors?.serverError }}
+                        </mat-error>
                     </mat-form-field>
-                </div>
-                <div fxLayout="row" fxLayoutAlign="center center">
-                    <button mat-raised-button type="button" color="accent" [disabled]="adminForm.invalid || adminForm.pristine ||
-                    adminForm.disabled" *ngIf="pageType ==='add'" (click)="formSubmit()">
-                        Add
-                    </button>
-                    &nbsp;&nbsp;
-                    <button mat-raised-button type="button" color="warn">
-                        Cancel
-                    </button>
                 </div>
             </form>
         </div>
