--- a/src/app/main/apps/admin/add-edit-admin/add-edit-admin.component.html
+++ b/src/app/main/apps/admin/add-edit-admin/add-edit-admin.component.html
@@ -41,6 +41,9 @@
                         <mat-label>First name</mat-label>
                         <input matInput formControlName="firstName" required>
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+                        <mat-error *ngIf="adminForm.get('firstName').errors?.required">
+                            Please Enter First Name
+                        </mat-error>
                         <mat-error *ngIf="adminForm.get('firstName').errors?.invalidValue">
                             Please Enter Valid First Name
                         </mat-error>
@@ -60,6 +63,9 @@
                         <mat-label>Username</mat-label>
                         <input matInput formControlName="username" required>
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+                        <mat-error *ngIf="adminForm.get('username').errors?.required">
+                            Please Enter Username
+                        </mat-error>
                         <mat-error *ngIf="adminForm.get('username').errors?.invalidValue">
                             Please Enter Valid Username
                         </mat-error>
@@ -114,21 +120,21 @@
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pr-4">
                         <mat-label>Profit Share Percentage</mat-label>
-                        <input matInput formControlName="profitSharePercentage" type="number">
-                        <mat-error *ngIf="adminForm.get('profitSharePercentage').errors?.serverError">
-                            {{ adminForm.get('profitSharePercentage').errors?.serverError }}
+                        <input matInput formControlName="profit_share_percent" type="number">
+                        <mat-error *ngIf="adminForm.get('profit_share_percent').errors?.serverError">
+                            {{ adminForm.get('profit_share_percent').errors?.serverError }}
                         </mat-error>
                     </mat-form-field>
 
                     <mat-form-field appearance="outline" fxFlex="50" class="pl-4">
                         <mat-label>Illinois Email </mat-label>
-                        <input matInput formControlName="illinoisEmail">
+                        <input matInput formControlName="illinois_email">
                         <mat-icon matSuffix class="secondary-text">email</mat-icon>
-                        <mat-error *ngIf="adminForm.get('illinoisEmail').hasError('email')">
+                        <mat-error *ngIf="adminForm.get('illinois_email').hasError('email')">
                             Please enter a valid email address
                         </mat-error>
-                        <mat-error *ngIf="adminForm.get('illinoisEmail').errors?.serverError">
-                            {{ adminForm.get('illinoisEmail').errors?.serverError }}
+                        <mat-error *ngIf="adminForm.get('illinois_email').errors?.serverError">
+                            {{ adminForm.get('illinois_email').errors?.serverError }}
                         </mat-error>
                     </mat-form-field>
 
@@ -150,6 +156,9 @@
                         <mat-label>Unique URL</mat-label>
                         <input matInput formControlName="unique_url" required>
                         <mat-icon matSuffix class="secondary-text">account_circle</mat-icon>
+                        <mat-error *ngIf="adminForm.get('unique_url').errors?.required">
+                            Please Enter Unique Url
+                        </mat-error>
                         <mat-error *ngIf="adminForm.get('unique_url').errors?.invalidValue">
                             Please Enter Valid Unique Url
                         </mat-error>
